add content on landing page

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -18,9 +18,46 @@
             <button class="signup">Signup</button>
             <button class="login">Login</button>
         </div>
-        
-        <div class="content">
-            
+    </div>
+
+    <div class="content">
+        <div class="image-area">
+            <div class="image-one">
+                <img src="{{ url_for('static', filename='img/landing-page/20563816-standard.avif') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-two">
+                <img src="{{ url_for('static', filename='img/landing-page/black-panther-web.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-three">
+                <img src="{{ url_for('static', filename='img/landing-page/social-distance-movies-bad-boy-2020.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-four">
+                <img src="{{ url_for('static', filename='img/landing-page/fall-poster-1654639543539.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-five">
+                <img src="{{ url_for('static', filename='img/landing-page/poster-for-movie.png') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-six">
+                <img src="{{ url_for('static', filename='img/landing-page/spider-man-far-from-home-official-movie.webp') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-seven">
+                <img src="{{ url_for('static', filename='img/landing-page/brand-name-movie-posters.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-eight">
+                <img src="{{ url_for('static', filename='img/landing-page/movie1.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-nine">
+                <img src="{{ url_for('static', filename='img/landing-page/movie2.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-ten">
+                <img src="{{ url_for('static', filename='img/landing-page/movie3.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-eleven">
+                <img src="{{ url_for('static', filename='img/landing-page/s-l1600.jpg') }}" alt="Failed to load image ">
+            </div>
+            <div class="image-twelve">
+                <img src="{{ url_for('static', filename='img/landing-page/ant_man_ver5.jpg') }}" alt="Failed to load image ">
+            </div>
         </div>
     </div>
 
