update rotation on landing page

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -22,42 +22,42 @@
 
     <div class="content">
         <div class="image-area">
-            <div class="image-one">
+            <span style="--i:1;">
                 <img src="{{ url_for('static', filename='img/landing-page/20563816-standard.avif') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-two">
+            </span>
+            <span style="--i:2;">
                 <img src="{{ url_for('static', filename='img/landing-page/black-panther-web.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-three">
+            </span>
+            <span style="--i:3;">
                 <img src="{{ url_for('static', filename='img/landing-page/social-distance-movies-bad-boy-2020.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-four">
+            </span>
+            <span style="--i:4;">
                 <img src="{{ url_for('static', filename='img/landing-page/fall-poster-1654639543539.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-five">
+            </span>
+            <span style="--i:5;">
                 <img src="{{ url_for('static', filename='img/landing-page/poster-for-movie.png') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-six">
+            </span>
+            <span style="--i:6;">
                 <img src="{{ url_for('static', filename='img/landing-page/spider-man-far-from-home-official-movie.webp') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-seven">
+            </span>
+            <span style="--i:7;">
                 <img src="{{ url_for('static', filename='img/landing-page/brand-name-movie-posters.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-eight">
+            </span>
+            <span style="--i:8;">
                 <img src="{{ url_for('static', filename='img/landing-page/movie1.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-nine">
+            </span>
+            <span style="--i:9;">
                 <img src="{{ url_for('static', filename='img/landing-page/movie2.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-ten">
+            </span>
+            <span style="--i:10;">
                 <img src="{{ url_for('static', filename='img/landing-page/movie3.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-eleven">
+            </span>
+            <span style="--i:11;">
                 <img src="{{ url_for('static', filename='img/landing-page/s-l1600.jpg') }}" alt="Failed to load image ">
-            </div>
-            <div class="image-twelve">
+            </span>
+            <span style="--i:12;">
                 <img src="{{ url_for('static', filename='img/landing-page/ant_man_ver5.jpg') }}" alt="Failed to load image ">
-            </div>
+            </span>
         </div>
     </div>
 
