--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -29,65 +29,29 @@
     position: relative;
     width: 900px;
     margin: 100px auto;
-    perspective: 800px;
+    perspective: 600px;
 }
-.image-area {
+.image-area{
     position: relative;
-    width: 100%;
-    height: 100%;
-    transform-origin: center;
     transform-style: preserve-3d;
-    animation: animate 20s steps(10000, end) infinite;
+    animation: animate 30s linear infinite;
 }
 .image-area img {
-    position: absolute;
     width: 100px;
     height: 150px;
     border: 2px solid #ffffff;
 }
+.image-area span {
+    left: 50%;
+    position: absolute;
+    transform: rotateY(calc(var(--i)*30deg)) translateZ(300px);
+}
 
-.image-one {
-    transform: rotateY(0deg) translateZ(300px);
-}
-.image-two {
-    transform: rotateY(30deg) translateZ(300px);
-}
-.image-three {
-    transform: rotateY(60deg) translateZ(300px);
-}
-.image-four {
-    transform: rotateY(90deg) translateZ(300px);
-}
-.image-five {
-    transform: rotateY(120deg) translateZ(300px);
-}
-.image-six {
-    transform: rotateY(150deg) translateZ(300px);
-}
-.image-seven {
-    transform: rotateY(180deg) translateZ(300px);
-}
-.image-eight {
-    transform: rotateY(210deg) translateZ(300px);
-}
-.image-nine {
-    transform: rotateY(240deg) translateZ(300px);
-}
-.image-ten {
-    transform: rotateY(270deg) translateZ(300px);
-}
-.image-eleven {
-    transform: rotateY(300deg) translateZ(300px);
-}
-.image-twelve {
-    transform: rotateY(330deg) translateZ(300px);
-}
 @keyframes animate {
-    from{
-        transform: rotateY(-360deg);
-    }
-    to{
+    from {
         transform: rotateY(0deg);
     }
-    
+    to {
+        transform: rotateY(360deg);
+    }
 }
