style buttons on landing page

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -15,8 +15,12 @@
             </a>
         </div>
         <div class="buttons">
-            <button class="signup">Signup</button>
-            <button class="login">Login</button>
+            <a href="/signup">
+                <button class="signup">Signup</button>
+            </a>
+            <a href="/login/">
+                <button class="login">Login</button>
+            </a>
         </div>
     </div>
 
