--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -15,13 +15,34 @@
     margin-left: 30px;
     margin-top: 30px;
 }
-.buttons .signup {
+.signup {
     min-width: 60px;
     min-height: 30px;
+    font-size: 15px;
+    background: transparent;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
 }
-.buttons .login {
+.login {
     min-width: 60px;
     min-height: 30px;
+    font-size: 15px;
+    background: transparent;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+}
+a {
+    text-decoration: none;
+}
+.login:hover {
+    color: rgb(153, 153, 153);
+}
+.signup:hover {
+    color: rgb(153, 153, 153);
 }
 
  /*image animation styling*/
