add signup page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 body {
-    margin: auto;
+    margin: 0;
     background-image: url("../img/sl_121019_25870_55.jpg");
     background-repeat: no-repeat;
     background-position: center;
