--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,8 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     margin: 0;
     background-image: url("../img/sl_121019_25870_55.jpg");
@@ -6,4 +11,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
     color: #ffffff;
+    /* font-family: 'poppins', sans-serif; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
