--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,10 +1,37 @@
 .box {
-    margin: auto;
+    position: relative;
+    margin: 100px auto;
+    background: rgba(26, 26, 26, 0.025);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     border: 1px solid #1a1a1a;
     border-radius: 5px;
     text-align: center;
+    width: 500px;
+    height: 600px;
+    }
+#cancel {
+    position: absolute;
+    background: transparent;
+    border: none;
+    font-size: 25px;
+    color: #ffffff;
+    cursor: pointer;
+    right: 0;
+    padding-right: 10px;
+    padding-top: 5px;
 }
-.box img {
+#cancel:hover {
+    color: rgb(153, 153, 153);
+}
+.content {
+    position: relative;
+    margin: auto;
+    padding: 25px;
+    width: 170px;
+    font-family: inherit;
+}
+.content img {
     width: 85px;
     height: 60px;
 }
@@ -16,4 +43,16 @@ form input {
 }
 form input:focus {
     outline: none;
+}
+form p {
+    text-align: left;
+    font-size: 15px;
+}
+.signup {
+    background-color: #ffffff;
+    width: 80px;
+    height: 40px;
+    border-radius: 80px;
+    padding: 0 18px;
+    cursor: pointer;
 }
