--- a/templates/landing.html
+++ b/templates/landing.html
@@ -18,7 +18,7 @@
             <a href="/signup">
                 <button class="signup">Signup</button>
             </a>
-            <a href="/login/">
+            <a href="/login">
                 <button class="login">Login</button>
             </a>
         </div>
