--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,20 +6,33 @@
     
 {% block body %}
     <div class="box">
-        <img src="{{ url_for('static', filename='img/logo.jpg') }}" alt="Failed to load image">
-        <h1>Signup</h1>
+        <a href="/">
+            <button id="cancel" type="reset">x</button>
+        </a>
 
-        <form action="", method="post">
-            <p>Firstname</p>
-            <input type="text" name="firstname" placeholder="Enter your firstname">
-            <p>Lastname</p>
-            <input type="text" name="lastname" placeholder="Enter your lastname">
-            <p>Email</p>
-            <input type="email" name="email" placeholder="Enter your email">
-            <p>Password</p>
-            <input type="password" name="password">
-            <p>Confirm Password</p>
-            <input type="password" name="password">
-        </form>
+        <div  class="content">
+            <img src="{{ url_for('static', filename='img/logo.jpg') }}" alt="Failed to load image">
+            <h1>Signup</h1>
+
+            <form action="", method="post">
+                <p>Firstname</p>
+                <input type="text" name="firstname" placeholder="Enter your firstname">
+                <p>Lastname</p>
+                <input type="text" name="lastname" placeholder="Enter your lastname">
+                <p>Email</p>
+                <input type="email" name="email" placeholder="Enter your email">
+                <p>Password</p>
+                <input type="password" name="password">
+                <p>Confirm password</p>
+                <input type="password" name="password">
+
+                <br>
+                <br>
+                <a href="/login">
+                    <button class="signup" type="submit">Signup</button>
+                </a>
+                
+            </form>
+        </div>
     </div>
 {% endblock %}
