--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,6 +1,6 @@
 .box {
     position: relative;
-    margin: 100px auto;
+    margin: 150px auto;
     background: rgba(26, 26, 26, 0.025);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
@@ -8,7 +8,7 @@
     border-radius: 5px;
     text-align: center;
     width: 500px;
-    height: 600px;
+    height: 400px;
 }
 #cancel {
     position: absolute;
@@ -48,7 +48,7 @@ form p {
     text-align: left;
     font-size: 15px;
 }
-.signup {
+.login {
     background-color: #ffffff;
     width: 80px;
     height: 40px;
@@ -56,7 +56,7 @@ form p {
     padding: 0 18px;
     cursor: pointer;
 }
-.signup:hover {
+.login:hover {
     background-color: #cccccc;
     /* background-color: rgb(153, 153, 153); */
 }
