--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -8,7 +8,7 @@
     border-radius: 5px;
     text-align: center;
     width: 500px;
-    height: 600px;
+    min-height: 600px;
 }
 #cancel {
     position: absolute;
@@ -59,4 +59,12 @@ form p {
 .signup:hover {
     background-color: #cccccc;
     /* background-color: rgb(153, 153, 153); */
+}
+.error {
+    color: rgb(255, 50, 0);
+    font-size: 13px;
+}
+.message {
+    color: rgb(25, 135, 84);
+    font-size: 13px;
 }
