--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,13 @@
             <img src="{{ url_for('static', filename='img/logo.jpg') }}" alt="Failed to load image">
             <h1>Login</h1>
 
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <p class="{{ category }}">{{  message }}</p>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <form action="", method="post">
                 <p>Email</p>
                 <input type="email" name="email" placeholder="Enter your email">
@@ -22,9 +29,9 @@
 
                 <br>
                 <br>
-                <a href="/home">
+                <!-- <a href="/home"> -->
                     <button class="login" type="submit">Login</button>
-                </a>
+                <!-- </a> -->
             </form>
         </div>
     </div>
