--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,7 +8,7 @@
     border-radius: 5px;
     text-align: center;
     width: 500px;
-    height: 400px;
+    min-height: 400px;
 }
 #cancel {
     position: absolute;
