--- a/templates/admin/add.html
+++ b/templates/admin/add.html
@@ -9,6 +9,14 @@
             <input type="text" name="category">
             <p>cover image</p>
             <input type="file" name="image">
+            <p>description</p>
+            <textarea name="description" id="" cols="30" rows="10"></textarea>
+            <p>date/time</p>
+            <input type="datetime-local" name="date_time">
+            <p>Cinema Room No:</p>
+            <input type="text" name="cinema_room">
+            <p>Price</p>
+            <input type="text" name="price">
 
             <br>
             <br>
