--- a/templates/landing.html
+++ b/templates/landing.html
@@ -27,40 +27,40 @@
     <div class="content">
         <div class="image-area">
             <span style="--i:1;">
-                <img src="{{ url_for('static', filename='img/landing-page/20563816-standard.avif') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/ant man.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:2;">
-                <img src="{{ url_for('static', filename='img/landing-page/black-panther-web.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/bad boy.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:3;">
-                <img src="{{ url_for('static', filename='img/landing-page/social-distance-movies-bad-boy-2020.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/black panther.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:4;">
-                <img src="{{ url_for('static', filename='img/landing-page/fall-poster-1654639543539.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/dragon ball z.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:5;">
-                <img src="{{ url_for('static', filename='img/landing-page/poster-for-movie.png') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/fall.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:6;">
-                <img src="{{ url_for('static', filename='img/landing-page/spider-man-far-from-home-official-movie.webp') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/grimsby.avif') }}" alt="Failed to load image ">
             </span>
             <span style="--i:7;">
-                <img src="{{ url_for('static', filename='img/landing-page/brand-name-movie-posters.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/harry potter.png') }}" alt="Failed to load image ">
             </span>
             <span style="--i:8;">
-                <img src="{{ url_for('static', filename='img/landing-page/movie1.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/home alone.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:9;">
-                <img src="{{ url_for('static', filename='img/landing-page/movie2.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/jujutsu kaisen.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:10;">
-                <img src="{{ url_for('static', filename='img/landing-page/movie3.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/mr clean.jpg') }}" alt="Failed to load image ">
             </span>
             <span style="--i:11;">
-                <img src="{{ url_for('static', filename='img/landing-page/s-l1600.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/spider man far from home.webp') }}" alt="Failed to load image ">
             </span>
             <span style="--i:12;">
-                <img src="{{ url_for('static', filename='img/landing-page/ant_man_ver5.jpg') }}" alt="Failed to load image ">
+                <img src="{{ url_for('static', filename='img/landing-page/world heros mission.jpg') }}" alt="Failed to load image ">
             </span>
         </div>
     </div>
