add seat selection page

--- a/templates/details.html
+++ b/templates/details.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <a href="/home/movie/{{ format_str(movie.name.lower()) }}-{{ movie.movie_id }}/booking/seat-selection">
+    <a href="/home/movie/{{ format_str(movie.name.lower()) }}-{{ movie.movie_id }}/booking/seat-selection-{{ movie.cinema_room }}/">
         <p class="button">Continue</p>
     </a>
     
