--- a/templates/seat_selection.html
+++ b/templates/seat_selection.html
@@ -16,48 +16,50 @@
         <div class="screen"></div>
     
         <div class="row">
-          <div class="seat">A1</div>
-          <div class="seat">A2</div>
-          <div class="seat">A3</div>
-          <div class="seat">A4</div>
-          <div class="seat">A5</div>
-          <div class="seat">A6</div>
-          <div class="seat">A7</div>
-          <div class="seat">A8</div>
+          <div class="available_seat" data-value="A1">A1</div>
+          <div class="available_seat" data-value="A2">A2</div>
+          <div class="available_seat" data-value="A3">A3</div>
+          <div class="available_seat" data-value="A4">A4</div>
+          <div class="available_seat" data-value="A5">A5</div>
+          <div class="available_seat" data-value="A6">A6</div>
+          <div class="available_seat" data-value="A7">A7</div>
+          <div class="available_seat" data-value="A8">A8</div>
         </div>
     
         <div class="row">
-          <div class="seat">B1</div>
-          <div class="seat">B2</div>
-          <div class="seat">B3</div>
-          <div class="seat">B4</div>
-          <div class="seat">B5</div>
-          <div class="seat">B6</div>
-          <div class="seat">B7</div>
-          <div class="seat">B8</div>
+          <div class="available_seat" data-value="B1">B1</div>
+          <div class="available_seat" data-value="B2">B2</div>
+          <div class="available_seat" data-value="B3">B3</div>
+          <div class="available_seat" data-value="B4">B4</div>
+          <div class="available_seat" data-value="B5">B5</div>
+          <div class="available_seat" data-value="B6">B6</div>
+          <div class="available_seat" data-value="B7">B7</div>
+          <div class="available_seat" data-value="B8">B8</div>
         </div>
     
         <div class="row">
-          <div class="seat">C1</div>
-          <div class="seat">C2</div>
-          <div class="seat">C3</div>
-          <div class="seat">C4</div>
-          <div class="seat">C5</div>
-          <div class="seat">C6</div>
-          <div class="seat">C7</div>
-          <div class="seat">C8</div>
+          <div class="available_seat" data-value="C1">C1</div>
+          <div class="available_seat" data-value="C2">C2</div>
+          <div class="available_seat" data-value="C3">C3</div>
+          <div class="available_seat" data-value="C4">C4</div>
+          <div class="available_seat" data-value="C5">C5</div>
+          <div class="available_seat" data-value="C6">C6</div>
+          <div class="available_seat" data-value="C7">C7</div>
+          <div class="available_seat" data-value="C8">C8</div>
         </div>
     
         <div class="row">
-          <div class="seat">D1</div>
-          <div class="seat">D2</div>
-          <div class="seat">D3</div>
-          <div class="seat">D4</div>
-          <div class="seat">D5</div>
-          <div class="seat">D6</div>
-          <div class="seat">D7</div>
-          <div class="seat">D8</div>
+          <div class="occupied_seat" data-value="D1">D1</div>
+          <div class="available_seat" data-value="D2">D2</div>
+          <div class="available_seat" data-value="D3">D3</div>
+          <div class="available_seat" data-value="D4">D4</div>
+          <div class="available_seat" data-value="D5">D5</div>
+          <div class="available_seat" data-value="D6">D6</div>
+          <div class="available_seat" data-value="D7">D7</div>
+          <div class="available_seat" data-value="D8">D8</div>
         </div>
       </div>
     </div>
+
+    <script src="{{ url_for('static', filename='js/seat_selection.js') }}"></script>
 {% endblock %}
