--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <form action="", method="post">
+            <form method="post">
                 <p>Email</p>
                 <input type="email" name="email" placeholder="Enter your email">
                 <p>Password</p>
