--- a/static/css/details.css
+++ b/static/css/details.css
@@ -44,25 +44,37 @@ a {
 }
 
 .button {
-    display: inline-block;
-    position: relative;
-    font-size: 20px;
-    padding-left: 90vw;
-    height: 2vw;
-    width: 5vw;
+    position: absolute;
+    width: 100%;
+    bottom: 3vh;
+    justify-content: center;
+    align-items: center;
 }
-.button::after {
+.button .btn {
+    position: absolute;
+    right: 1vw;
+    bottom: 2vh;
+}
+button {
+    background: transparent;
+    border: none;
+    font-size: medium;
+    color: #ffffff;
+
+}
+button::after {
     content: '';
     position: absolute;
-    width: 5vw;
+    width: 4vw;
     padding-left: 5px;
     transform: scaleX(0);
     height: 1.5px;
     background-color: #ffffff;
     transform-origin: bottom right;
     transition:  transform 0.3s ease-in-out;
+    margin: 2.5vh -4.2vw;
 }
-.button:hover::after {
+button:hover::after {
     cursor: pointer;
     transform: scaleX(1);
     transform-origin: bottom left;
