Edit home page logic to only show categories that are not empty

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -46,7 +46,7 @@
     border-radius: 5px;
     width: 140px;
     height: 200px;
-    margin-left: 10px;
+    margin: 10px;
 }
 .images img:hover {
     box-shadow: 0 0 8px 2px #aaaaaa;
